# CudaMemTrace-Core

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: CudaMemTraceCoreConfig.cmake.in
docs/: CMakeLists.txt  index.md
docs/doxygen/: Doxyfile.in  mainpage.md
examples/: CMakeLists.txt  DependencyCheckExample.cpp
include/cudamemtrace/core/: DependencyCheck.h
include/cudamemtrace/core/call/: CallBinding.h  CallSite.h
include/cudamemtrace/core/graph/: CFGBlock.h  CFGEdge.h  Function.h  FunctionCFG.h  ICFG.h  ICFGEdge.h  ICFGNode.h  Ids.h  ProgramGraph.h
include/cudamemtrace/core/memory/: MemoryObject.h  MemoryOp.h
include/cudamemtrace/core/support/: SourceLoaction.h  SourceLocation.h  SourceRange.h
include/cudamemtrace/core/value/: SymbolicExpr.h  Variable.h
schemas/: README.md
scripts/: build_ubuntu_llvm21.sh  format.sh  generate_docs.sh
src/: CMakeLists.txt  DependencyCheck.cpp
src/graph/: CFGBlock.cpp  FunctionCFG.cpp  ICFG.cpp  ProgramGraph.cpp
tests/: CMakeLists.txt  DependencyCheckTest.cpp  GraphModelTest.cpp
